# faculty-cards

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gw_law_cards.py  main.py  pyproject.toml  requirements.txt  spec.txt
.github/workflows/: ci.yml
