[project]
name = "faculty-cards"
version = "0.1.0"
description = "Python pipeline to scrape GW Law faculty directory and generate Anki flashcards"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "genanki",
    "requests",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.15",
    "pre-commit>=3.6.0",
]
